@@ -152,6 +152,7 @@ AC_PATH_PROGS(PTAL_CONNECT,ptal-connect,/usr/bin/ptal-connect,$BINSEARCHPATH:$SB
 AC_PATH_DIRS(PTAL_PIPES,ptal-printd,/var/run/ptal-printd,$PTALPIPESSEARCHPATH)
 AC_PATH_DIRS(MTINK_PIPES,mtink,/var/mtink,$MTINKPIPESSEARCHPATH)
 AC_PATH_PROGS(CAT,cat,/bin/cat,$BINSEARCHPATH:$SBINSEARCHPATH)
+AC_PATH_PROGS(GZIP,gzip,/bin/gzip,$BINSEARCHPATH:$SBINSEARCHPATH)
 AC_PATH_PROGS(WGET,wget,/usr/bin/wget,$BINSEARCHPATH:$SBINSEARCHPATH)
 AC_PATH_PROGS(CURL,curl,/usr/bin/curl,$BINSEARCHPATH:$SBINSEARCHPATH)
 
